[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Mocha Assets/Icons.PNG" type="Texture" id=2]
[ext_resource path="res://assets/Mocha Assets/UI/ex-symbol.png" type="Texture" id=3]
[ext_resource path="res://UI/dice_theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/GoalCount.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0.105882, 0.0784314, 0.0941176, 1 )
font_data = ExtResource( 1 )

[node name="GoalCount" type="Node2D"]
script = ExtResource( 5 )

[node name="FirstGoal" type="Node2D" parent="."]
position = Vector2( 19, -34 )

[node name="Sprite" type="Sprite" parent="FirstGoal"]
position = Vector2( -53, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Ex-symbol" type="Sprite" parent="FirstGoal"]
modulate = Color( 0.439216, 0.215686, 0.341176, 1 )
position = Vector2( -10.6, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="FirstGoal"]
margin_left = 7.0
margin_top = -31.0
margin_right = 47.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.105882, 0.0784314, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="SecondGoal" type="Node2D" parent="."]
position = Vector2( 18, 31 )

[node name="Sprite" type="Sprite" parent="SecondGoal"]
position = Vector2( -53, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
frame = 2

[node name="Ex-symbol" type="Sprite" parent="SecondGoal"]
modulate = Color( 0.439216, 0.215686, 0.341176, 1 )
position = Vector2( -10.6, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="SecondGoal"]
margin_left = 8.0
margin_top = -31.0
margin_right = 48.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.105882, 0.0784314, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"

[node name="ThirdGoal" type="Node2D" parent="."]
position = Vector2( 21, 92 )

[node name="Sprite" type="Sprite" parent="ThirdGoal"]
position = Vector2( -53, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="Ex-symbol" type="Sprite" parent="ThirdGoal"]
modulate = Color( 0.439216, 0.215686, 0.341176, 1 )
position = Vector2( -10.6, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ThirdGoal"]
margin_left = 8.0
margin_top = -31.0
margin_right = 48.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.105882, 0.0784314, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
text = "2"
